# krunner-dict-zh

./: CMakeLists.txt  LICENSE  README.md  plasma-runner-dict-zh.desktop
debian/: changelog  control  copyright  gbp.conf  watch
src/: dict_zh_runner.cpp  dict_zh_runner.h  youdao.cpp  youdao.h
